2022-02-07  Simon Fraser  <simon.fraser@apple.com>

        Tidy up some ImageBuffer-related classes
        https://bugs.webkit.org/show_bug.cgi?id=236170

        Reviewed by Darin Adler.

        CGDisplayListImageBufferBackend can be final.
        ImageBufferShareableBitmapBackend can be final.
        Functions on ImageBufferShareableIOSurfaceBackend can be final.

        * Shared/RemoteLayerTree/CGDisplayListImageBufferBackend.h:
        * WebProcess/GPU/graphics/ImageBufferShareableBitmapBackend.h:
        (WebKit::ImageBufferShareableBitmapBackend::setOwnershipIdentity): Deleted.
        * WebProcess/GPU/graphics/cocoa/ImageBufferShareableIOSurfaceBackend.h:

2022-02-07  Ben Nham  <nham@apple.com>

        Add PushService
        https://bugs.webkit.org/show_bug.cgi?id=235857

        Reviewed by Brady Eidson.

        This adds PushService to webpushd. It handles requests to create, remove, and get push
        subscriptions. It also decrypts incoming pushes and pass them back to the UI process via the
        existing machinery in WebPushDaemon.

        PushService primarily interacts with two objects:

        1. PushServiceConnection: this creates and removes push subscriptions from the push server.
           It also receives incoming pushes from the push server.
        2. PushDatabase: this persists push subscriptions to disk.

        Several things are not yet implemented; for instance, we currently always grant a page the
        permission to receive pushes. This will be fixed in future patches.

        Covered by new API tests. The current tests use a MockPushServiceConnection that vends
        subscription with fixed data, but this can be improved in the future.

        * Shared/API/Cocoa/WKMain.h:
        * Shared/API/Cocoa/WKMain.mm:
        (WKWebPushDaemonMain):
        * Shared/Cocoa/WebPushMessageCocoa.mm: add ability to distinguish between an empty vs. null payload.
        (WebKit::WebPushMessage::fromDictionary):